test/langtools/tools/javac/valhalla/value-objects/classfile/null_restricted_attr/attr_is_unique/CheckNullRestrictedAttrIsUnique.out
CheckNullRestrictedAttrIsUnique.java:13:9: compiler.err.cant.access: DuplicateNullRestrictedAttr, (compiler.misc.bad.class.file.header: DuplicateNullRestrictedAttr.class, (compiler.misc.attribute.must.be.unique: NullRestricted))
1 error
